force-app/main/default/objects/Apttus_Base2__TelemetryMetric__c/Apttus_Base2__TelemetryMetric__c.object-meta.xml
<CustomObject>
    <description>Object used to capture a metric for analytics about a service. The metric is captured at runtime.</description>
    <label>Telemetry Metric</label>
    <nameField>
        <displayFormat>TM-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telemetry Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>