force-app/main/default/objects/Apttus_Base2__TelemetryMetric__c/fields/Apttus_Base2__IsSynced__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__IsSynced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether this record has been synchronized with the external system or not. If so, data will be deleted in the next scheduled batch job run.</description>
    <inlineHelpText>Determines whether this record has been synchronized with the external system or not. If so, data will be deleted in the next scheduled batch job run.</inlineHelpText>
    <label>Is Record Synced?</label>
    <type>Checkbox</type>
</CustomField>