force-app/main/default/objects/Apttus_Base2__TelemetryMetric__c/fields/Apttus_Base2__MetricType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__MetricType__c</fullName>
    <description>Type of metric captured.</description>
    <inlineHelpText>Type of metric captured.</inlineHelpText>
    <label>Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPU Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>