force-app/main/default/objects/Apttus_Base2__TelemetryMetric__c/fields/Apttus_Base2__OrgId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__OrgId__c</fullName>
    <description>Salesforce organization id.</description>
    <inlineHelpText>Salesforce organization id.</inlineHelpText>
    <label>Org Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>