force-app/main/default/objects/Apttus_Base2__TelemetryMetric__c/fields/Apttus_Base2__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__Timestamp__c</fullName>
    <description>Timestamp from when the operation occurred.</description>
    <inlineHelpText>Timestamp from when the operation occurred.</inlineHelpText>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>