force-app/main/default/objects/Apttus_Base2__TelemetryMetric__c/fields/Apttus_Base2__UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__UnitOfMeasure__c</fullName>
    <description>Unit of measure for this metric.</description>
    <inlineHelpText>Unit of measure for this metric.</inlineHelpText>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Milliseconds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>